# md2data

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
bindings/node/: Cargo.toml  README.md  index.js  package-lock.json  package.json
bindings/node/it/: format.test.js
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/it/: test_format.py
bindings/python/src/: lib.rs
crates/datadown/: Cargo.toml
crates/datadown-cli/: Cargo.toml
crates/datadown-cli/src/: main.rs
crates/datadown-core/: Cargo.toml
crates/datadown-core/src/: lib.rs  parse.rs
crates/datadown-core/tests/: format_tests.rs  parser_tests.rs
crates/datadown-core/tests/fixtures/: regression_panic.md
crates/datadown/src/: ast.rs  lib.rs  main.rs  parse.rs  parse_minified.rs
crates/datadown/tests/: format_tests.rs  parser.rs  parser_minified.rs  parser_tests.rs
crates/datadown/tests/fixtures/: code_blocks.md  headings.md  unicode.md
crates/md2data/: Cargo.toml  README.md
crates/md2data/src/: ast.rs  lib.rs  main.rs  parse.rs  sanitizers.rs
crates/md2data/tests/: parser.rs  parser_minified.rs
crates/md2data/tests/fixtures/: complex.md  inline_formatting.md  lists.md  simple.md
docs/: BINDINGS_BUILD_PROCESS.md  RELEASE_PROCESS.md  TESTING.md
docs/assets/: logo.psd
docs/examples/: input.md  output.json  output.toml  output.xml  output.yaml
docs/usage/: NODE_USAGE.md  PYTHON_USAGE.md  RUST_USAGE.md
