[package]
name = "datadown_node"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Node binding for Datadown: Markdown → JSON/YAML/TOML/XML. Faster with Rust."

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi4"] }
napi-derive = "3"
datadown = { path = "../../crates/datadown", features = ["yaml","toml","xml"] }

[build-dependencies]
napi-build = "2.2.4"
