[package]
name = "md2data_node"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "Node binding for md2data: Markdown → JSON/YAML/TOML/XML. Faster with Rust."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi4"] }
napi-derive = "3"
md2data = { path = "../../crates/md2data", features = ["yaml","toml","xml"] }

[build-dependencies]
napi-build = "2.2.4"
