[package]
name = "datadown_py"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Python binding for Datadown: Markdown → JSON/YAML/TOML/XML. Faster with Rust."
publish = false

[lib]
name = "datadown_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
datadown = { path = "../../crates/datadown", features = ["yaml","toml","xml"] }
