[package]
name = "md2data_py"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "Python binding for md2data: Markdown → JSON/YAML/TOML/XML. Faster with Rust."
publish = false

[lib]
name = "md2data_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
md2data = { path = "../../crates/md2data", features = ["yaml","toml","xml"] }
