[package]
name = "datadown-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core: parse Markdown to AST and serialize to formats"

[features]
default = ["json"]
json = []
yaml = ["dep:serde_yaml"]
toml = ["dep:toml"]
xml  = ["dep:quick-xml"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
pulldown-cmark = "0.10"
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
quick-xml = { version = "0.36", features = ["serialize"], optional = true }
