[package]
name = "datadown-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Core: parse Markdown to AST and serialize to formats"

[features]
default = ["json"]
json = []
yaml = ["dep:serde_yaml"]
toml = ["dep:toml"]
xml  = ["dep:quick-xml"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.17"
pulldown-cmark = "0.13.0"
serde_json = "1"
serde_yaml = { version = "0.9.34-deprecated", optional = true }
toml = { version = "0.9.8", optional = true }
quick-xml = { version = "0.38.3", features = ["serialize"], optional = true }

[dev-dependencies]
insta = "1.35"  # Snapshot testing
pretty_assertions = "1.4"  # Better assertion output
